Port to 1.21 Fix pack meta generation Fix pack content generation firer Add world pos for magic rope Fix ritual structure network